[workspace]
members = [
    "rs_coroutine_core",
    "rs_flow",
    "examples/web_fetch_example",
]

resolver = "2"

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
futures = "0.3"
pin-project = "1.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
